Fixed how the header looks on smaller view widths

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -19,10 +19,24 @@ header {
     padding: 20px;
 }
 
+#title-section {
+    display: flex;
+    align-items: center;
+}
+
 header h1 {
     margin: 0;
     font-size: 36px;
     color: #4b9cd3;
+}
+
+#title-h1 {
+    padding: 10px;
+    border: 5px solid #4b9cd3;
+}
+
+#subtitle-h1 {
+    padding-left: 20px;
 }
 
 nav {
@@ -76,4 +90,20 @@ footer {
     color: #ffffff;
     padding: 10px;
     text-align: center;
+}
+
+@media (max-width: 800px) {
+    header {
+        flex-direction: column;
+    }
+
+    #title-section {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    header h1 {
+        font-size: 24px;
+    }
 }
